--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -14,7 +14,8 @@ table {
 }
 
 table caption {
-    font-size: 1.5em;
+    font-size: 1.4em;
+    font-weight: 600;
     margin: .5em 0 .75em;
 }
 
@@ -40,13 +41,23 @@ tbody tr:nth-child(odd) {
     background: #f0f0f0
 }
 
-thead tr {
+thead tr,
+tfoot tr {
     border: 1px solid #333;
     background-color: #333;
     color: #fff;
 }
 
-@media screen and (max-width: 320px) {
+input[type='number']{
+    width: 42px;
+}
+
+label {
+    display: inline-block;
+    width: 50px;
+}
+
+@media screen and (max-width: 430px) {
     body {
         padding: 0;
     }
@@ -56,7 +67,7 @@ thead tr {
     }
 
     table caption {
-        font-size: 1.3em;
+        font-size: 1em;
     }
 
     table thead {
@@ -93,4 +104,9 @@ thead tr {
     table td:last-child {
         border-bottom: 0;
     }
+}
+
+.source {
+    text-align: center;
+    font-weight: 600;
 }
